Tue Nov 19 15:18:13 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	There are a lot of details to this change, but the concept is
	relatively simple: make it so that for every CVSLCK lock that we
	might take out, there is a flag which is set iff we have created
	the CVSLCK directory.
	* lock.c (struct lock): New structure.
	* lock.c: Remove static variables repository and cleanup_lckdir.
 	They are replaced by global_readlock.repository and
	global_readlock.have_lckdir, respectively (except insofar as the
	rest of these changes change the concept of cleanup_lckdir).
	New static variable global_readlock.
	(Reader_Lock, Lock_Cleanup): Use global_readlock in place of
	repository.
	(lock_simple_remove, set_lock, clear_lock, write_lock): Take a
	struct lock * instead of just a repository.  Set/clear
	lock->have_lckdir instead of cleanup_lckdir.
	(set_writelock_proc, unlock_proc): Pass ->data, not ->key, to
	write_lock or lock_simple_remove.
	(lock_filesdoneproc,lock_dir_for_write): Allocate a struct lock,
	put it in the ->data field, and fill in its fields.
	(lock_simple_remove): Use lock->have_lckdir as the sole test for
	whether the CVSLCK directory needs to be removed.  Add
	comments about why readlock and writelock variables don't tell us
	for sure whether locks exist.
	(lock_simple_remove, clear_lock): Use SIG_beginCrSect and
	SIG_endCrSect to ensure that ->have_lckdir is set to 0 iff the
	CVSLCK directory was really removed.
	(lock_simple_remove): Check for errors removing CVSLCK directory.
	(lock_simple_remove, Check_Owner, set_lock): Remove all code which
	checks userids (including all of Check_Owner and all the AFCVS
	code).  It was bogus if several CVS processes with the same userid
	were running (common if several users share a userid; a common
	practice with remote CVS), and with the rest of the changes here
	should not be needed.

1996-11-16  Paul Eggert  <eggert@twinsun.com>

	* rcs.c (RCS_deltas): Fix unintended trigraphs.
